# ssg-hs-forensics-app

./: .gitignore  Makefile  README.md  pyproject.toml
config/: config.toml
docs/: development.html  example1.html  image-gallery-guide.html  index.html  lesson-creation-guide.html  search.json
docs/site_libs/bootstrap/: bootstrap-14026cccc8a9e03aaaa9d56314b2cf8b.min.css  bootstrap-54061a0d7910f7c50b84f3ace82f7db1.min.css  bootstrap-96c35273f248d8504b1562e194f76070.min.css
forensics-backend/: docker-compose.yml
forensics-backend/app/: Dockerfile  main.py  requirements.txt  run_sam2.py  runsam.py
forensics-backend/html/: index.html
forensics-backend/nginx/: default.conf
forensics-ui/: _quarto.yml  index.qmd  protoype.qmd
forensics-ui/_site/: about.html  index.html  protoype.html  search.json
forensics-ui/_site/Lesson1/: 1-objectives.html  2-saliva.html  3-skin.html  4-blood.html  5-buccal.html  6-epithelial.html  7-quiz.html  index.html
forensics-ui/cell-gallery/: gallery.qmd  index.qmd
forensics-ui/lesson-1/: 1-objectives.qmd  2-saliva.qmd  3-skin.qmd  4-blood.qmd  5-buccal.qmd  6-epithelial.qmd  7-quiz.qmd  8-analysis-introduction.qmd  _video-lightbox.html  index.qmd  styles.css
forensics-ui/lesson-3/: blood.qmd  buccal.qmd  certificate.qmd  complete.qmd  index.qmd  index3.qmd  saliva.qmd  skin.qmd
forensics-ui/upload/: styles2.css  upload.qmd
masks/: ad_buc_14.sam1_vit_b.default_windows.h5  ad_buc_5.sam1_vit_b.default_windows.h5  ad_buc_5.sam1_vit_l.default.h5  ad_s33.sam1_vit_b.default_windows.h5  ad_s33.sam2_1_hiera_tiny.default.h5  ad_s33.sam2_hiera_tiny.default.h5  ad_sal23.sam1_vit_b.default_windows.h5  ioLight_20240612T115010.sam1_vit_b.default_windows.h5  ioLight_image-50.sam1_vit_b.default_windows.h5  va_5.sam1_vit_b.default_windows.h5  va_8_(1).sam1_vit_b.default_windows.h5  va_finger.sam1_vit_b.default_windows.h5
reports/: Makefile  README.md  _quarto.yml  development.qmd  example1.qmd  image-gallery-guide.qmd  index.qmd  lesson-creation-guide.qmd
sample-code/: AlinaZ_Segment Anything Model_WithAnalysis.py  Copy of ToSend_FindAreas.ipynb
sample-images/: README.md
src/sam2/: __init__.py
src/ssg_hs_forensics_app/: cli.py  config_loader.py  config_logger.py
tests/: conftest.py
tests/api/: conftest.py
tests/cli/: conftest.py  test_cli_imports.py  test_config_init_force.py  test_config_init_installed_mode.py  test_config_init_repo_mode.py  test_config_show.py  test_config_show_missing_file.py
tests/config/: test_config_paths.py
tests/core/: conftest.py  test_cache.py  test_config_loader.py  test_mask_generator.py  test_postprocess.py  test_sam_defaults.py  test_sam_loader.py
tests/integration/: conftest.py
tools/: test_vendor_imports.py  vendor_sync.py
(+81 files in other folders)
