[project]
name = "ssg-hs-forensics-app"
version = "0.1.0"
description = "High school app for forensics"
authors = [
    {name = "John Leonard",email = "john@lowkeylabs.com"}
]
readme = "README.md"
homepage = "https://vcu-ssg.github.io/ssg-hs-forensics-app/"
repository = "https://github.com/vcu-ssg/ssg-hs-forensics-app"

packages = [
    { include = "ssg_hs_forensics_app", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
click = "^8.1"
jupyter = ">=1.1.1,<2.0.0"
matplotlib = ">=3.10.5,<4.0.0"
plotly = ">=6.3.0,<7.0.0"
triton = "^3.4.0"
torchvision = "^0.23.0"
segment-anything = "^1.0"
ipykernel = "^6.30.1"
pip = "^25.2"
opencv-python = "^4.12.0.88"

[tool.poetry.group.dev.dependencies]


[tool.poetry.scripts]
hsf = "ssg_hs_forensics_app.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
